--- a/blocks/page.css
+++ b/blocks/page.css
@@ -15,3 +15,10 @@
   flex-direction: column;
   min-height: 100vh;
 }
+
+@media screen and (max-width: 910px) {
+  .page {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
+}
