--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -72,3 +72,96 @@
 .profile__add-button:hover {
   opacity: 0.5;
 }
+
+@media screen and (max-width: 480px) {
+  .profile {
+    flex-direction: column;
+  }
+
+  .profile__image {
+    margin: auto;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .profile__title {
+    font-size: 22px;
+    line-height: 26.63px;
+    margin: 30px 0 14px 0;
+    display: flex;
+    justify-content: center;
+  }
+
+  .profile__subtitle {
+    width: 100%;
+    text-align: center;
+  }
+
+  .profile__add-button {
+    width: calc(100% - 19px);
+    margin: 36px auto;
+  }
+}
+
+@media screen and (max-width: 775px) {
+  .profile__info {
+    grid-template-columns: minmax(auto, 268px) auto;
+  }
+
+  .profile__title {
+    font-size: 30px;
+    width: 268px;
+    margin-right: 20px;
+    max-width: 400px;
+  }
+
+  .profile__subtitle {
+    font-size: 15px;
+  }
+
+  .profile__add-button {
+    width: 80px;
+    height: 50px;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .profile {
+    flex-direction: column;
+  }
+
+  .profile__image {
+    margin: auto;
+  }
+
+  .profile__info {
+    display: grid;
+  }
+
+  .profile__title {
+    font-size: 30px;
+    line-height: 26.63px;
+    margin: 30px 15px 14px 0;
+    display: flex;
+    justify-content: center;
+  }
+
+  .profile__edit-button {
+    margin-top: 20px;
+  }
+
+  .profile__subtitle {
+    margin: auto;
+    max-width: 200px;
+  }
+
+  .profile__add-button {
+    width: 270px;
+    margin: 36px auto;
+  }
+}
