--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,12 +1,3 @@
-.card__list {
-  display: grid;
-  justify-content: center;
-  grid-template-columns: repeat(auto-fit, 282px);
-  grid-gap: 20px 17px;
-  padding: 0;
-  margin: 0;
-}
-
 .card {
   display: flex;
   flex-direction: column;
@@ -21,7 +12,7 @@
   border-top-left-radius: 10px;
 }
 
-.card__decription {
+.card__description {
   display: flex;
   background-color: #fff;
   color: #000;
@@ -31,7 +22,17 @@
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   width: 242px;
-  height: 29px;
+  max-height: 29px;
+}
+
+.card__title {
+  font-family: Inter, Arial, sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29.05px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__like-button {
@@ -43,32 +44,16 @@
 }
 
 .card__like-button:hover {
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
-.card__footer-text {
-  color: #545454;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 21.78px;
-  margin: 67px 0 0;
-}
-
-@media screen and (max-width: 480px) {
-  .cards {
-    margin-top: 0;
-  }
-
+@media screen and (max-width: 620px) {
   .card__footer-text {
     margin-top: 48px;
   }
 }
 
-@media screen and (max-width: 620px) {
-  .cards {
-    margin-top: 0;
-  }
-
+@media screen and (max-width: 480px) {
   .card__footer-text {
     margin-top: 48px;
   }
