--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,8 +1,18 @@
 .cards {
-  font-family: Inter, Arial, sans-serif;
-  font-size: 13px;
-  font-weight: 900;
-  line-height: 29.05;
   margin-top: 51px;
-  /*font-size 24px was too big for the card size */
+}
+
+.cards__list {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  padding: 0;
+  margin: 0;
+}
+
+@media screen and (max-width: 620px) {
+  .cards {
+    margin-top: 0;
+  }
 }
