--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,24 +1,12 @@
 .header {
   margin-top: 45px;
-  border-bottom: solid 1px #545454;
+  border-bottom: solid 1px rgba(84, 84, 84, 0.7);
 }
 
 .header__logo {
   margin-bottom: 41px;
   width: 173px;
   height: 33px;
-}
-
-@media screen and (max-width: 480px) {
-  .header {
-    margin-top: 0;
-  }
-
-  .header__logo {
-    width: 126px;
-    height: 24px;
-    margin: 28px 0 32px 27px;
-  }
 }
 
 @media screen and (max-width: 620px) {
@@ -28,5 +16,12 @@
 
   .header__logo {
     margin: 28px 0 32px 27px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .header__logo {
+    width: 126px;
+    height: 24px;
   }
 }
