Fix code review part 2

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -22,7 +22,7 @@
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   width: 242px;
-  max-height: 29px;
+  height: 29px;
 }
 
 .card__title {
@@ -33,6 +33,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin: 0;
 }
 
 .card__like-button {
@@ -44,17 +45,5 @@
 }
 
 .card__like-button:hover {
-  opacity: 0.6;
-}
-
-@media screen and (max-width: 620px) {
-  .card__footer-text {
-    margin-top: 48px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .card__footer-text {
-    margin-top: 48px;
-  }
+  opacity: 0.5;
 }
