--- a/blocks/card.css
+++ b/blocks/card.css
@@ -22,7 +22,6 @@
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   width: 242px;
-  height: 29px;
 }
 
 .card__title {
@@ -34,6 +33,7 @@
   white-space: nowrap;
   overflow: hidden;
   margin: 0;
+  max-width: 219px;
 }
 
 .card__like-button {
@@ -42,6 +42,7 @@
   width: 21px;
   height: 18px;
   cursor: pointer;
+  background-size: 21px 18px;
 }
 
 .card__like-button:hover {
