--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  margin: 67px 0 60px;
+  padding: 67px 0 60px;
 }
 
 .footer__text {
@@ -13,6 +13,11 @@
 
 @media screen and (max-width: 480px) {
   .footer {
-    margin: 48px 0 36px;
+    padding: 48px 0 36px 19px;
+  }
+
+  .footer__text {
+    font-size: 14px;
+    line-height: 16.94px;
   }
 }
