--- a/blocks/page.css
+++ b/blocks/page.css
@@ -14,11 +14,19 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  padding: 0 20px;
 }
 
 @media screen and (max-width: 910px) {
   .page {
-    margin-right: 20px;
     margin-left: 20px;
+    margin-right: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .page__content {
+    padding: 0;
   }
 }
