--- a/blocks/page.css
+++ b/blocks/page.css
@@ -21,11 +21,15 @@
   .page {
     margin-left: 20px;
     margin-right: 20px;
-    padding-right: 20px;
   }
 }
 
 @media screen and (max-width: 480px) {
+  .page {
+    padding: 0;
+    margin: 0;
+  }
+
   .page__content {
     padding: 0;
   }
