--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -47,7 +47,7 @@
   opacity: 0.6;
 }
 
-.profile__subtitle {
+.profile__description {
   grid-area: subtitle;
   font-family: Inter, Arial, sans-serif;
   font-size: 18px;
