--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,6 +3,23 @@
   flex-direction: column;
   width: 282px;
   list-style-type: none;
+  position: relative;
+}
+
+.card__delete-button {
+  position: absolute;
+  background-image: transparent url(../images/trash.svg) center no-repeat;
+
+  border: none;
+  width: 18px;
+  height: 19px;
+  cursor: pointer;
+  right: 15px;
+  top: 18px;
+}
+
+.card__delete-button:hover {
+  opacity: 0.6;
 }
 
 .card__image {
@@ -43,6 +60,10 @@
   height: 18px;
   cursor: pointer;
   background-size: 21px 18px;
+}
+
+.card__like-button_active {
+  background-image: url(../images/like-button-active.svg);
 }
 
 .card__like-button:hover {
