--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -76,8 +76,7 @@
   background-color: #000;
   border: none;
   margin-top: 48px;
-  height: 50px; /*
-  width: 358px;*/
+  height: 50px;
   cursor: pointer;
   font-size: 18px;
   line-height: 22px;
