--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -94,16 +94,17 @@
 
 .modal__image-container {
   background-color: transparent;
-  width: 433px;
-  height: 540px;
+  max-width: 75vw;
+  max-height: 75vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0;
 }
 
 .modal__preview-image {
   max-height: 75vh;
   max-width: 75vw;
-  display: flex;
-  justify-content: center;
-  margin: auto;
 }
 
 .modal__preview-title {
