--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -62,6 +62,11 @@
   display: flex;
   flex-direction: column;
 }
+
+.modal__label {
+  position: relative;
+}
+
 .modal__input {
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -74,6 +79,23 @@
   height: 27px;
   padding-left: 5px;
   color: #000;
+  width: calc(100%);
+  outline: none;
+}
+
+.modal__error {
+  font-size: 12px;
+  line-height: 15px;
+  color: #f00;
+  position: absolute;
+  left: 0;
+  transition: opacity 0.3s;
+  top: calc(100% + 5px);
+}
+
+.modal__input_type_error {
+  border-bottom: 1px solid #f00;
+  margin-bottom: 0px;
 }
 
 .modal__button {
@@ -86,6 +108,12 @@
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
+}
+
+.modal__button_disabled {
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.2);
+  border: rgba(0, 0, 0, 0.2) 1px solid;
 }
 
 .modal__button:hover {
