--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -4,12 +4,38 @@
   align-items: center;
 }
 
-.profile__image {
+.profile__image-parent {
   width: 120px;
   height: 120px;
+  margin-right: 30px;
+  position: relative;
+  border-radius: 50%;
+}
+
+.profile__image-parent:hover .profile__image {
+  opacity: 0.2;
+}
+
+.profile__image-parent:hover .profile__image-hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.profile__image {
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   object-fit: cover;
-  margin-right: 30px;
+  transition: opacity 0.5s;
+}
+
+.profile__image-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  padding: 47px;
+  transition: opacity 0.5s;
 }
 
 .profile__info {
